<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/list_item_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/widebackground"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp" >

        <RelativeLayout
            android:layout_width="130dp"
            android:layout_height="90dp" >

            <ImageView
                android:id="@+id/list_item_icon"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="10dp"
                android:contentDescription="@string/videoicon"
                android:scaleType="fitXY" />

            <ImageView
                android:layout_width="130dp"
                android:layout_height="90dp"
                android:contentDescription="@string/videoicon"
                android:scaleType="fitXY"
                android:src="@drawable/tvframe" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:text="@string/presentedby"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/list_item_favicon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/favicon"
                android:src="@drawable/sherpin_logo_transparent" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/list_item_text"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:minLines="4"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold" />

</LinearLayout>