<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sherpin_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trendingmedia"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <net.sherpin.mediaviewer.views.SherpinHorizontalScrollView
                android:id="@+id/trendingmedia_scrollview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none" >

                <LinearLayout
                    android:id="@+id/trendingmedia"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" />
            </net.sherpin.mediaviewer.views.SherpinHorizontalScrollView>

            <ProgressBar
                android:id="@+id/trendingmedia_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminate="true"
                android:visibility="invisible" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trendingnews"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <net.sherpin.mediaviewer.views.SherpinHorizontalScrollView
                android:id="@+id/trendingnews_scrollview"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:scrollbars="none" >

                <LinearLayout
                    android:id="@+id/trendingnews"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" />
            </net.sherpin.mediaviewer.views.SherpinHorizontalScrollView>

            <ProgressBar
                android:id="@+id/trendingnews_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminate="true"
                android:visibility="invisible" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mediabackpack"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <net.sherpin.mediaviewer.views.SherpinHorizontalScrollView
                android:id="@+id/backpack_scrollview"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:scrollbars="none" >

                <LinearLayout
                    android:id="@+id/backpack"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" />
            </net.sherpin.mediaviewer.views.SherpinHorizontalScrollView>

            <ProgressBar
                android:id="@+id/backpack_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminate="true"
                android:visibility="invisible" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mysherpas"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <net.sherpin.mediaviewer.views.SherpinHorizontalScrollView
                android:id="@+id/mysherpas_scrollview"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:scrollbars="none" >

                <LinearLayout
                    android:id="@+id/mysherpas"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" />
            </net.sherpin.mediaviewer.views.SherpinHorizontalScrollView>

            <ProgressBar
                android:id="@+id/mysherpas_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminate="true"
                android:visibility="invisible" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>